[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://kimberly-geswein_a-year-without-rain/Kimberlyfont.tres" type="DynamicFont" id=2]

[node name="Tutorial" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect1" type="ColorRect" parent="."]
margin_left = 36.0
margin_top = 30.0
margin_right = 587.0
margin_bottom = 78.0
color = Color( 0.298039, 0.537255, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 43.0
margin_top = 60.0
margin_right = 359.0
margin_bottom = 103.0
color = Color( 0.298039, 0.537255, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 44.0
margin_top = 88.0
margin_right = 360.0
margin_bottom = 135.0
color = Color( 0.298039, 0.537255, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 44.0
margin_top = 115.0
margin_right = 399.0
margin_bottom = 165.0
color = Color( 0.298039, 0.537255, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Movement" type="Label" parent="."]
margin_left = 54.0
margin_top = 36.0
margin_right = 618.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "Use the arrow keys to move the farmer!"
align = 3
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Hoe" type="Label" parent="."]
margin_left = 54.0
margin_top = 64.0
margin_right = 245.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 2 )
text = "Left-click to till the soil!"
align = 3
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer2" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Plant" type="Label" parent="."]
margin_left = 54.0
margin_top = 93.0
margin_right = 251.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 2 )
text = "Press \"R\" to plant seeds!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer3" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Water" type="Label" parent="."]
margin_left = 53.0
margin_top = 119.0
margin_right = 275.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 2 )
text = "Press \"T\" to water the soil!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer4" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="MessageTimer2" to="." method="_on_MessageTimer2_timeout"]
[connection signal="timeout" from="MessageTimer3" to="." method="_on_MessageTimer3_timeout"]
[connection signal="timeout" from="MessageTimer4" to="." method="_on_MessageTimer4_timeout"]
